--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="index, follow">
     <link rel="icon" type="image/png" href="imagens/favicon.ico">
     
     <!-- Meta tags para controle da prévia -->
@@ -12,11 +11,11 @@
     <meta property="og:image" content="https://i.imgur.com/k37zpxa.jpeg" />
     <meta property="og:url" content="https://rodr1goxl.github.io/Feliz-aniversario-/" />
     <meta name="twitter:card" content="summary_large_image" />
-    
+    <meta name="robots" content="index, follow, noimageindex">
     <!-- Meta tag com a frase única -->
     <meta name="keywords" content="22:2523082024">
 
-    <title>22:2523082024</title>
+    <title class="tii">Feliz aniversário</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,6 +29,9 @@
     </div>
 
     <!-- Conteúdo do site -->
+    <!-- Conteúdo do site (início do conteúdo escondido) -->
+<div id="conteudo" style="display: none;">
+    <!-- TODO O SEU CONTEÚDO AQUI -->
     <div class="music-container">
         <label class="music-button">
             <input type="checkbox" id="music-toggle" />
@@ -68,41 +70,44 @@
         <div id="contador"></div>
 
         <div class="linha"></div>
+        <p style="display:none;">Parabéns, Chai</p>
+<p>Entra ai...</p>
 
-        <p class="p">Parabéns, chai, hoje teu dia, e eu poderia falar um monte de coisa que todo vai te falar hoje, mas nada disso chegaria perto do que você realmente significa pra mim. Então, vou só dizer o que vem do coração: você é incrível.
-
-         Cada conversa nossa, cada risada aleatória, cada momento bobo que a gente viveu... tudo isso faz a vida ficar mais leve. Você tem esse jeito único de iluminar o dia dos outros sem nem perceber, e eu espero que hoje o universo retribua pelo menos um pouco disso pra você.Feliz aniversário! Que esse novo ciclo traga tudo de bom, e que a gente continue compartilhando momentos que tem muito valor. <br>Você merece o mundo. 💜</p>
+        <p class="p">Parabéns, chai, hoje teu dia, e eu poderia falar um monte de coisa que todo mundo vai te falar hoje, mas nada disso chegaria perto do que você realmente significa pra mim. Então, vou só dizer o que vem do coração: você é incrível.
+        <br>
+        Cada conversa nossa, cada risada aleatória, cada momento bobo que a gente viveu... tudo isso faz a vida ficar mais leve. Você tem esse jeito único de iluminar o dia dos outros sem nem perceber, e eu espero que hoje o universo retribua pelo menos um pouco disso para vc.<br>Feliz aniversário! Que esse novo ciclo traga tudo de bom, e que a gente continue compartilhando momentos que tem muito valor. <br>Você merece o mundo. 💜</p>
     </div>
 
     <script src="script.js"></script>
     <footer class="rodape">
   <p>&copy; Por:@rodr1go_xl
   <br>
-  ⠀⠀⠀✦ ⠀ ⠀　　　　　　　　　　　　　　⠀⠀⠀⠀⠀* ⠀⠀⠀.　　　　　　　　　　. ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀✦⠀⠀⠀ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀☄️ ⠀ ⠀⠀⠀⠀⠀⠀.　　　　　　　　　　　　　.　　　ﾟ .　　　　　　　　　　　　　. 　　　　　　　　　　　　　　　✦ 　　　　　,　　　　　　　.
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀☀️
-　　　　　　*　　　　　　　　　　　.
-.　　　　　　　　　　　　　. 　　✦⠀　   　　　,　　　　　　　　　*
-　　　　　⠀　　　　⠀　　,
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀.　　　　　 　　⠀　　　⠀.　
-　　˚　　　⠀　⠀  　　,　　　　　　.
-　　　　　　　　　　　　　.
-　　　　　　*⠀　　⠀  　　　　　⠀✦⠀　
-　　　　　　　　　　　　　　　　　　.
-　　　　.　　　　.　　　⠀🌕
-　　　　　　　　　　　.
-　　　　　　　🚀
-　　　˚　　　　　　　　ﾟ　　　　　.
-　.⠀　　⠀‍⠀‍⠀‍⠀‍⠀‍⠀‍⠀‍⠀‍⠀‍⠀‍⠀,
-　　　*　　⠀.
-　　　　　.　　　　　　　　　　⠀✦
-　˚　　　　　　　　　　　　　　*
-.⠀ 　　　　　　　　　　.　　　　　　　　.
-　　　　　✦⠀　   　　　,　　    　　🌎　°　　
-
-　•　　.°•　　　🚀 
- ✯
-　　　★　*　　　　　°　　　　🛰 　°· 
+  ⠀⠀⠀✦ ⠀<br> ⠀　　　　　　　　　　　　　<br>　⠀⠀⠀⠀⠀*<br> ⠀⠀⠀.　　　　　　　　　　.<br> ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀✦⠀⠀⠀<br> ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀<br>⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀<br> ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀<br>⠀⠀⠀⠀☄️ ⠀<br> ⠀⠀⠀⠀⠀⠀.　　　　　　　　　　　<br>　　.　　　ﾟ<br> .　　　　　　　　　　　　　.<br> 　　　　　　　　　　　　　　　✦<br> 　　　　　,　　　　　　　.<br>
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀☀️<br>
+　　　　　<br>　*　　　　　　　　　　　.<br>
+.　　　　　　　　　　　　　. 　<br>　✦⠀　   　　　,　　　　　　　　　*<br>
+　　　　　⠀　　　　⠀　　,<br>
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀.　　　　　 　<br>　⠀　　　⠀.　<br>
+　　˚　　　⠀<br>　⠀  　　,　　　　　　.<br>
+　　　　　　　　　　　　　.<br>
+　　　　　　*⠀　　⠀  　　　　<br>　⠀✦⠀　<br>
+　　　　　　　　　　　　　　　　<br>　　.<br>
+　　　　.　　　　.　　　⠀🌕<br>
+　　　　　　　　　　　.<br>
+　　　　　　　🚀<br>
+　　　˚　　　　　　　　ﾟ　　　　　.<br>
+　.⠀　　⠀‍⠀‍⠀‍⠀‍⠀‍⠀‍⠀‍⠀‍⠀‍⠀‍⠀,<br>
+　　　*　　⠀.<br>
+　　　　　.　　　　　　　　　　⠀✦<br>
+　˚　　　　　　　　　　　　　　*<br>
+.⠀<br> 　　　　　　　　　　.　　　　　<br>　　　.<br>
+　　　　　✦⠀　   　　　,　　    　<br>　🌎　°　　<br>
+<br>
+　•　　.°•　　　🚀 <br>
+✯<br>
+　　　★　*　　　　　°　　　　🛰<br> 　°·
   </p>
 </footer>
+</div>
 </body>
-</html>
+                    </html>
