--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
         <div id="contador"></div>
 
         <div class="linha"></div>
-        <p style="display:none;">Parabéns, Chai</p>
-<p>Entra ai...</p>
+        <p style="display:none;">............................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................</p>
 
         <p class="p">Parabéns, chai, hoje teu dia, e eu poderia falar um monte de coisa que todo mundo vai te falar hoje, mas nada disso chegaria perto do que você realmente significa pra mim. Então, vou só dizer o que vem do coração: você é incrível.
         <br>
@@ -110,4 +109,4 @@
 </footer>
 </div>
 </body>
-                    </html>
+        </html>
