--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Meta tags para controle da prévia -->
     <meta property="og:title" content="O quê tem aqui?  🤔" />
     <meta property="og:description" content="Descobre ai pá nois 🤭" />
-    <meta property="og:image" content="https://i.imgur.com/k37zpxa.jpeg" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/rodr1goxl/Imagens-/refs/heads/main/favicon.ico" />
     <meta property="og:url" content="https://rodr1goxl.github.io/Feliz-aniversario-/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="robots" content="index, follow, noimageindex">
