--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <path d="M48 64C21.5 64 0 85.5 0 112V400c0 26.5 21.5 48 48 48H80c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H48zm192 0c-26.5 0-48 21.5-48 48V400c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H240z"></path>
             </svg>
         </label>
-        <span class="music-text"><--Música</span>
+        <span class="music-text"><«--Música</span>
     </div>
 
     <audio id="musica" src="audio/musica.mp3" loop></audio>
@@ -70,9 +70,22 @@
         <div id="contador"></div>
 
         <div class="linha"></div>
-        <p style="display:none;">............................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................</p>
+        <p style="display:none;">No silêncio onde o tempo se desfaz,
+mora a calma que a alma sempre traz.
+É no sopro leve da imaginação
+que nasce a poesia do coração.
 
-        <p class="p">Parabéns, chai, hoje teu dia, e eu poderia falar um monte de coisa que todo mundo vai te falar hoje, mas nada disso chegaria perto do que você realmente significa pra mim. Então, vou só dizer o que vem do coração: você é incrível.
+As estrelas bordam o céu escuro,
+sonhos dançam num espaço puro.
+Cada rima é luz que quer brilhar,
+cada estrofe um mundo a caminhar.
+
+Se a vida é breve, feito canção,
+que seja doce cada emoção.
+E ao final, que reste apenas amor,
+feito perfume que vence a flor.</p>
+
+        <p class="p">Parabéns, chai, hoje seu dia, e eu poderia falar um monte de coisa que todo mundo vai te falar hoje, mas nada disso chegaria perto do que você realmente significa pra mim. Então, vou só dizer o que vem do coração: você é incrível.
         <br>
         Cada conversa nossa, cada risada aleatória, cada momento bobo que a gente viveu... tudo isso faz a vida ficar mais leve. Você tem esse jeito único de iluminar o dia dos outros sem nem perceber, e eu espero que hoje o universo retribua pelo menos um pouco disso para vc.<br>Feliz aniversário! Que esse novo ciclo traga tudo de bom, e que a gente continue compartilhando momentos que tem muito valor. <br>Você merece o mundo. 💜</p>
     </div>
