--- a/index.html
+++ b/index.html
@@ -70,20 +70,50 @@
         <div id="contador"></div>
 
         <div class="linha"></div>
-        <p style="display:none;">No silêncio onde o tempo se desfaz,
-mora a calma que a alma sempre traz.
-É no sopro leve da imaginação
-que nasce a poesia do coração.
+        <p style="display:none;">Amizade é sol em dia nublado,
+é riso solto quando tudo parece pesado,
+é abraço que cala o medo e a dor,
+é colo sem pressa, é puro amor.
 
-As estrelas bordam o céu escuro,
-sonhos dançam num espaço puro.
-Cada rima é luz que quer brilhar,
-cada estrofe um mundo a caminhar.
+É estar junto mesmo de longe,
+é saber do outro sem precisar que conte,
+é dividir o silêncio e ainda assim entender,
+é celebrar vitórias e ajudar a renascer.
 
-Se a vida é breve, feito canção,
-que seja doce cada emoção.
-E ao final, que reste apenas amor,
-feito perfume que vence a flor.</p>
+Amigo é quem segura a mão na tempestade,
+é quem fala a verdade com suavidade,
+é quem conhece os defeitos, e ainda assim fica,
+é quem compartilha o fardo, e nunca complica.
+
+É presença que não cobra, mas acolhe,
+é risada que explode e não se recolhe,
+é lembrança boa guardada no peito,
+é certeza que o mundo ainda tem jeito.
+
+Amizade é plantar sem querer colher,
+é doar sem esperar receber,
+é estar por perto só por querer bem,
+é dizer “tô aqui” sem precisar dizer “vem”.
+
+É café tarde da noite, conversa jogada,
+é plano doido, viagem improvisada,
+é chorar junto vendo filme clichê,
+é brigar e depois esquecer porquê.
+
+É saber que o tempo pode passar,
+mas que a conexão vai sempre ficar.
+É foto velha que arranca sorriso,
+é aquele “lembra disso?” que aquece o juízo.
+
+Amigo é tesouro que não se compra,
+é estrela-guia quando o caminho desmonta.
+É quem vê tua sombra e ainda assim escolhe ficar,
+é farol aceso pra te orientar.
+
+Então celebre seus amigos de coração,
+eles são parte da tua canção.
+Porque amizade é ponte, é raiz, é laço,
+é a vida dizendo: “não caminha sozinho, eu faço o passo.”</p>
 
         <p class="p">Parabéns, chai, hoje seu dia, e eu poderia falar um monte de coisa que todo mundo vai te falar hoje, mas nada disso chegaria perto do que você realmente significa pra mim. Então, vou só dizer o que vem do coração: você é incrível.
         <br>
