--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- Tela Inicial -->
     <div id="tela-inicial">
-        <button id="botao-entrada" class="botao">💜 Clique aqui</button>
+        <button id="botao-entrada" class="neon-button">💜 Clique aqui</button>
     </div>
 
     <!-- Conteúdo do site -->
