--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <path d="M48 64C21.5 64 0 85.5 0 112V400c0 26.5 21.5 48 48 48H80c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H48zm192 0c-26.5 0-48 21.5-48 48V400c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H240z"></path>
             </svg>
         </label>
-        <span class="music-text"><«--Música</span>
+        <span class="music-text">Música</span>
     </div>
 
     <audio id="musica" src="audio/musica.mp3" loop></audio>
