--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
             <div id="contador"></div>
 
             <div class="linha"></div>
-            <p style="display:none;">Amizade é sol em dia nublado,
-é riso solto quando tudo parece pesado,
-é abraço que cala o medo e a dor,
-é colo sem pressa, é puro amor.
+            <p style="display:none;">Feliz aniversário, Chai, esse é um site simples que fiz
+                por não poder te dar um presente físico 
+                (3000km não é brincadeira kkk), espero que goste, 
+                pois deu trabalho fazer isso do zero.
 
 É estar junto mesmo de longe,
 é saber do outro sem precisar que conte,
